@@ -1,9 +1,0 @@
-<?php
-$MCONF['name'] = 'web_txsrsendcardM1';
-
-$MCONF['access'] = 'user,group';
-$MCONF['script'] = '_DISPATCH';
-
-$MLANG['default']['tabs_images']['tab'] = '../Resources/Public/Images/moduleicon.png';
-$MLANG['default']['ll_ref'] = 'LLL:EXT:sr_sendcard/Resources/Private/Language/locallang_mod.xlf';
-?>
