@@ -3,6 +3,7 @@
 	* Replace extension icons
 	* Move template to Resources directory
 	* Move plugin to Classes directory
+	* Reconfigure the Statistics module
 
 2015-12-26  Stanislas Rolland  <typo3(arobas)sjbr.ca>
 
